--- a/print.html
+++ b/print.html
@@ -10050,25 +10050,25 @@ workbook.close()
 <li>
 <p>Added several Chart axis and series methods:</p>
 <ul>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_hidden"><code>chartaxis.set_hidden()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_label_interval"><code>chartaxis.set_label_interval()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_label_position"><code>chartaxis.set_label_position()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_log_base"><code>chartaxis.set_log_base()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_major_gridlines"><code>chartaxis.set_major_gridlines()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_major_gridlines_line"><code>chartaxis.set_major_gridlines_line()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_major_tick_type"><code>chartaxis.set_major_tick_type()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_major_unit"><code>chartaxis.set_major_unit()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_max"><code>chartaxis.set_max()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_min"><code>chartaxis.set_min()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_minor_gridlines"><code>chartaxis.set_minor_gridlines()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_minor_gridlines_line"><code>chartaxis.set_minor_gridlines_line()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_minor_tick_type"><code>chartaxis.set_minor_tick_type()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_minor_unit"><code>chartaxis.set_minor_unit()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_position_between_ticks"><code>chartaxis.set_position_between_ticks()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_reverse"><code>chartaxis.set_reverse()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartaxis.html#method.set_tick_interval"><code>chartaxis.set_tick_interval()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartseries.html#method.set_invert_if_negative"><code>chartseries.set_invert_if_negative()</code></a></li>
-<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chartseries.html#method.set_invert_if_negative_color"><code>chartseries.set_invert_if_negative_color()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_hidden"><code>chartaxis.set_hidden()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_label_interval"><code>chartaxis.set_label_interval()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_label_position"><code>chartaxis.set_label_position()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_log_base"><code>chartaxis.set_log_base()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_major_gridlines"><code>chartaxis.set_major_gridlines()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_major_gridlines_line"><code>chartaxis.set_major_gridlines_line()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_major_tick_type"><code>chartaxis.set_major_tick_type()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_major_unit"><code>chartaxis.set_major_unit()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_max"><code>chartaxis.set_max()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_min"><code>chartaxis.set_min()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_minor_gridlines"><code>chartaxis.set_minor_gridlines()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_minor_gridlines_line"><code>chartaxis.set_minor_gridlines_line()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_minor_tick_type"><code>chartaxis.set_minor_tick_type()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_minor_unit"><code>chartaxis.set_minor_unit()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_position_between_ticks"><code>chartaxis.set_position_between_ticks()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_reverse"><code>chartaxis.set_reverse()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartAxis.html#method.set_tick_interval"><code>chartaxis.set_tick_interval()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartSeries.html#method.set_invert_if_negative"><code>chartseries.set_invert_if_negative()</code></a></li>
+<li><a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartSeries.html#method.set_invert_if_negative_color"><code>chartseries.set_invert_if_negative_color()</code></a></li>
 </ul>
 </li>
 </ul>
