--- a/colors/intro.html
+++ b/colors/intro.html
@@ -142,53 +142,53 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="working-with-colors"><a class="header" href="#working-with-colors">Working with Colors</a></h1>
-<p>The <a href="https://docs.rs/rust_xlsxwriter/0.11.0/rust_xlsxwriter/enum.XlsxColor.html"><code>XlsxColor</code></a> enum defines Excel colors the can be used throughout the
+<p>The <a href="https://docs.rs/rust_xlsxwriter/0.11.0/rust_xlsxwriter/enum.Color.html"><code>Color</code></a> enum defines Excel colors the can be used throughout the
 <code>rust_xlsxwriter</code> library.</p>
 <p>There are 3 types of colors within the enum:</p>
 <ol>
-<li>Predefined named RGB colors like <code>XlsxColor::Green</code>.</li>
-<li>User defined RGB colors like <code>XlsxColor::RGB(0x4F026A)</code>.</li>
-<li>Theme colors like <code>XlsxColor::Theme(9, 4)</code>.</li>
+<li>Predefined named RGB colors like <code>Color::Green</code>.</li>
+<li>User defined RGB colors like <code>Color::RGB(0x4F026A)</code>.</li>
+<li>Theme colors like <code>Color::Theme(9, 4)</code>.</li>
 </ol>
 <p>These are explained in more detail in the sections below.</p>
 <h2 id="named-colors"><a class="header" href="#named-colors">Named colors</a></h2>
 <p>For convenience there are a number of predefined named colors which are
 translated internally to RGB colors. These are shown in the table below.</p>
 <div class="table-wrapper"><table><thead><tr><th>Name</th><th>Value</th></tr></thead><tbody>
-<tr><td><code>XlsxColor::Black</code></td><td><code>0x000000</code></td></tr>
-<tr><td><code>XlsxColor::Blue</code></td><td><code>0x0000FF</code></td></tr>
-<tr><td><code>XlsxColor::Brown</code></td><td><code>0x800000</code></td></tr>
-<tr><td><code>XlsxColor::Cyan</code></td><td><code>0x00FFFF</code></td></tr>
-<tr><td><code>XlsxColor::Gray</code></td><td><code>0x808080</code></td></tr>
-<tr><td><code>XlsxColor::Green</code></td><td><code>0x008000</code></td></tr>
-<tr><td><code>XlsxColor::Lime</code></td><td><code>0x00FF00</code></td></tr>
-<tr><td><code>XlsxColor::Magenta</code></td><td><code>0xFF00FF</code></td></tr>
-<tr><td><code>XlsxColor::Navy</code></td><td><code>0x000080</code></td></tr>
-<tr><td><code>XlsxColor::Orange</code></td><td><code>0xFF6600</code></td></tr>
-<tr><td><code>XlsxColor::Pink</code></td><td><code>0xFF00FF</code></td></tr>
-<tr><td><code>XlsxColor::Purple</code></td><td><code>0x800080</code></td></tr>
-<tr><td><code>XlsxColor::Red</code></td><td><code>0xFF0000</code></td></tr>
-<tr><td><code>XlsxColor::Silver</code></td><td><code>0xC0C0C0</code></td></tr>
-<tr><td><code>XlsxColor::White</code></td><td><code>0xFFFFFF</code></td></tr>
-<tr><td><code>XlsxColor::Yellow</code></td><td><code>0xFFFF00</code></td></tr>
-<tr><td><code>XlsxColor::Default  </code></td><td>None</td></tr>
-<tr><td><code>XlsxColor::Automatic</code></td><td>None</td></tr>
+<tr><td><code>Color::Black</code></td><td><code>0x000000</code></td></tr>
+<tr><td><code>Color::Blue</code></td><td><code>0x0000FF</code></td></tr>
+<tr><td><code>Color::Brown</code></td><td><code>0x800000</code></td></tr>
+<tr><td><code>Color::Cyan</code></td><td><code>0x00FFFF</code></td></tr>
+<tr><td><code>Color::Gray</code></td><td><code>0x808080</code></td></tr>
+<tr><td><code>Color::Green</code></td><td><code>0x008000</code></td></tr>
+<tr><td><code>Color::Lime</code></td><td><code>0x00FF00</code></td></tr>
+<tr><td><code>Color::Magenta</code></td><td><code>0xFF00FF</code></td></tr>
+<tr><td><code>Color::Navy</code></td><td><code>0x000080</code></td></tr>
+<tr><td><code>Color::Orange</code></td><td><code>0xFF6600</code></td></tr>
+<tr><td><code>Color::Pink</code></td><td><code>0xFF00FF</code></td></tr>
+<tr><td><code>Color::Purple</code></td><td><code>0x800080</code></td></tr>
+<tr><td><code>Color::Red</code></td><td><code>0xFF0000</code></td></tr>
+<tr><td><code>Color::Silver</code></td><td><code>0xC0C0C0</code></td></tr>
+<tr><td><code>Color::White</code></td><td><code>0xFFFFFF</code></td></tr>
+<tr><td><code>Color::Yellow</code></td><td><code>0xFFFF00</code></td></tr>
+<tr><td><code>Color::Default  </code></td><td>None</td></tr>
+<tr><td><code>Color::Automatic</code></td><td>None</td></tr>
 </tbody></table>
 </div>
-<p>The <code>XlsxColor::Default</code> value translates to the default color in whatever
-context it is used. The <code>XlsxColor::Automatic</code> value is usually the same but can
-be overridden by system settings.</p>
+<p>The <code>Color::Default</code> value translates to the default color in whatever context
+it is used. The <code>Color::Automatic</code> value is usually the same but can be
+overridden by system settings.</p>
 <h2 id="rgb-colors"><a class="header" href="#rgb-colors">RGB colors</a></h2>
 <p>These are the most common colors used throughout Excel. In <code>rust_xlsxwriter</code>
-they can be generated using the <code>XlsxColor::RGB()</code> member of the enum like this:
-<code>XlsxColor::RGB(0x4F026A)</code>.</p>
+they can be generated using the <code>Color::RGB()</code> member of the enum like this:
+<code>Color::RGB(0x4F026A)</code>.</p>
 <p>These are similar to <a href="https://htmlcolors.com">HTML style colors</a> which most people will be familiar with.</p>
 <h2 id="theme-colors"><a class="header" href="#theme-colors">Theme colors</a></h2>
 <p>Theme colors are colors  from the standard palette of 60 colors which is shown
 in the image below.</p>
 <p><img src="../../images/theme_color_palette.png" alt="Image of the Excel theme color palette" /></p>
-<p>The syntax for theme colors in XlsxColor is <code>Theme(color, shade)</code> where <code>color</code>
-is one of the 0-9 values on the top row and <code>shade</code> is the variant in the
+<p>The syntax for theme colors in Color is <code>Theme(color, shade)</code> where <code>color</code> is
+one of the 0-9 values on the top row and <code>shade</code> is the variant in the
 associated column from 0-5. For example &quot;White, background 1&quot; in the top left is
 <code>Theme(0, 0)</code> and &quot;Orange, Accent 6, Darker 50%&quot; in the bottom right is
 <code>Theme(9, 5)</code>.</p>
