--- a/examples/colors.html
+++ b/examples/colors.html
@@ -167,76 +167,76 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let worksheet = workbook.add_worksheet().set_name(&quot;RGB Colors&quot;)?;
 
     // Write some enum defined colors to cells.
-    let color_format = Format::new().set_background_color(XlsxColor::Black);
+    let color_format = Format::new().set_background_color(Color::Black);
     worksheet.write_string(0, 0, &quot;Black&quot;)?;
     worksheet.write_blank(0, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Blue);
+    let color_format = Format::new().set_background_color(Color::Blue);
     worksheet.write_string(1, 0, &quot;Blue&quot;)?;
     worksheet.write_blank(1, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Brown);
+    let color_format = Format::new().set_background_color(Color::Brown);
     worksheet.write_string(2, 0, &quot;Brown&quot;)?;
     worksheet.write_blank(2, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Cyan);
+    let color_format = Format::new().set_background_color(Color::Cyan);
     worksheet.write_string(3, 0, &quot;Cyan&quot;)?;
     worksheet.write_blank(3, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Gray);
+    let color_format = Format::new().set_background_color(Color::Gray);
     worksheet.write_string(4, 0, &quot;Gray&quot;)?;
     worksheet.write_blank(4, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Green);
+    let color_format = Format::new().set_background_color(Color::Green);
     worksheet.write_string(5, 0, &quot;Green&quot;)?;
     worksheet.write_blank(5, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Lime);
+    let color_format = Format::new().set_background_color(Color::Lime);
     worksheet.write_string(6, 0, &quot;Lime&quot;)?;
     worksheet.write_blank(6, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Magenta);
+    let color_format = Format::new().set_background_color(Color::Magenta);
     worksheet.write_string(7, 0, &quot;Magenta&quot;)?;
     worksheet.write_blank(7, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Navy);
+    let color_format = Format::new().set_background_color(Color::Navy);
     worksheet.write_string(8, 0, &quot;Navy&quot;)?;
     worksheet.write_blank(8, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Orange);
+    let color_format = Format::new().set_background_color(Color::Orange);
     worksheet.write_string(9, 0, &quot;Orange&quot;)?;
     worksheet.write_blank(9, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Pink);
+    let color_format = Format::new().set_background_color(Color::Pink);
     worksheet.write_string(10, 0, &quot;Pink&quot;)?;
     worksheet.write_blank(10, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Purple);
+    let color_format = Format::new().set_background_color(Color::Purple);
     worksheet.write_string(11, 0, &quot;Purple&quot;)?;
     worksheet.write_blank(11, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Red);
+    let color_format = Format::new().set_background_color(Color::Red);
     worksheet.write_string(12, 0, &quot;Red&quot;)?;
     worksheet.write_blank(12, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Silver);
+    let color_format = Format::new().set_background_color(Color::Silver);
     worksheet.write_string(13, 0, &quot;Silver&quot;)?;
     worksheet.write_blank(13, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::White);
+    let color_format = Format::new().set_background_color(Color::White);
     worksheet.write_string(14, 0, &quot;White&quot;)?;
     worksheet.write_blank(14, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::Yellow);
+    let color_format = Format::new().set_background_color(Color::Yellow);
     worksheet.write_string(15, 0, &quot;Yellow&quot;)?;
     worksheet.write_blank(15, 1, &amp;color_format)?;
 
     // Write some user defined RGB colors to cells.
-    let color_format = Format::new().set_background_color(XlsxColor::RGB(0xFF7F50));
+    let color_format = Format::new().set_background_color(Color::RGB(0xFF7F50));
     worksheet.write_string(16, 0, &quot;#FF7F50&quot;)?;
     worksheet.write_blank(16, 1, &amp;color_format)?;
 
-    let color_format = Format::new().set_background_color(XlsxColor::RGB(0xDCDCDC));
+    let color_format = Format::new().set_background_color(Color::RGB(0xDCDCDC));
     worksheet.write_string(17, 0, &quot;#DCDCDC&quot;)?;
     worksheet.write_blank(17, 1, &amp;color_format)?;
 
@@ -258,12 +258,12 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
         for col in 0..=9u16 {
             let color = col as u8;
             let shade = row as u8;
-            let theme_color = XlsxColor::Theme(color, shade);
+            let theme_color = Color::Theme(color, shade);
             let text = format!(&quot;({}, {})&quot;, col, row);
 
-            let mut font_color = XlsxColor::White;
+            let mut font_color = Color::White;
             if col == 0 {
-                font_color = XlsxColor::Default;
+                font_color = Color::Default;
             }
 
             let color_format = Format::new()
