--- a/examples/formatting.html
+++ b/examples/formatting.html
@@ -167,7 +167,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
         .set_bold()
         .set_align(FormatAlign::Top)
         .set_border(FormatBorder::Thin)
-        .set_background_color(XlsxColor::RGB(0xC6EFCE));
+        .set_background_color(Color::RGB(0xC6EFCE));
 
     // -----------------------------------------------------------------------
     // Create a worksheet that demonstrates number formatting.
@@ -331,7 +331,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet.write_string_with_format(8, 0, &quot;Font size 18&quot;, &amp;size_format)?;
 
     // Font color.
-    let font_color_format = Format::new().set_font_color(XlsxColor::Red);
+    let font_color_format = Format::new().set_font_color(Color::Red);
     worksheet.write_string_with_format(9, 0, &quot;Font color&quot;, &amp;font_color_format)?;
 
     // Font underline.
@@ -366,7 +366,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     let border_format4 = Format::new()
         .set_border(FormatBorder::Thin)
-        .set_border_color(XlsxColor::Red);
+        .set_border_color(Color::Red);
     worksheet.write_string_with_format(8, 2, &quot;Color Border&quot;, &amp;border_format4)?;
 
     // -----------------------------------------------------------------------
@@ -383,13 +383,13 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Write some cells with pattern fills.
     let fill_format1 = Format::new()
-        .set_background_color(XlsxColor::Yellow)
+        .set_background_color(Color::Yellow)
         .set_pattern(FormatPattern::Solid);
     worksheet.write_string_with_format(2, 1, &quot;Solid fill&quot;, &amp;fill_format1)?;
 
     let fill_format2 = Format::new()
-        .set_background_color(XlsxColor::Yellow)
-        .set_foreground_color(XlsxColor::Orange)
+        .set_background_color(Color::Yellow)
+        .set_foreground_color(Color::Orange)
         .set_pattern(FormatPattern::Gray0625);
     worksheet.write_string_with_format(4, 1, &quot;Pattern fill&quot;, &amp;fill_format2)?;
 
