--- a/examples/hyperlinks.html
+++ b/examples/hyperlinks.html
@@ -156,7 +156,7 @@ the workbook.</p>
 </span><span class="boring">//! A simple, getting started, example of some of the features of the
 </span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Format, FormatUnderline, Workbook, XlsxColor, XlsxError};
+</span>use rust_xlsxwriter::{Color, Format, FormatUnderline, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -164,7 +164,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Create a format to use in the worksheet.
     let link_format = Format::new()
-        .set_font_color(XlsxColor::Red)
+        .set_font_color(Color::Red)
         .set_underline(FormatUnderline::Single);
 
     // Add a worksheet to the workbook.
