--- a/examples/merge_range.html
+++ b/examples/merge_range.html
@@ -156,7 +156,7 @@ types, such as number, as shown below.</p>
 </span><span class="boring">//! An example of creating merged ranges in a worksheet using the
 </span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Format, FormatAlign, FormatBorder, Workbook, XlsxColor, XlsxError};
+</span>use rust_xlsxwriter::{Color, Format, FormatAlign, FormatBorder, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -185,7 +185,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
         .set_align(FormatAlign::Center)
         .set_align(FormatAlign::VerticalCenter)
         .set_border(FormatBorder::Thin)
-        .set_background_color(XlsxColor::Silver);
+        .set_background_color(Color::Silver);
 
     worksheet.merge_range(7, 1, 8, 3, &quot;Merged cells&quot;, &amp;format)?;
 
