--- a/examples/rich_strings.html
+++ b/examples/rich_strings.html
@@ -153,7 +153,7 @@
 </span><span class="boring">//! An example of using the rust_xlsxwriter library to write &quot;rich&quot; multi-format
 </span><span class="boring">//! strings in worksheet cells.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Format, FormatAlign, FormatScript, Workbook, XlsxColor, XlsxError};
+</span>use rust_xlsxwriter::{Color, Format, FormatAlign, FormatScript, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -166,8 +166,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Add some formats to use in the rich strings.
     let default = Format::default();
-    let red = Format::new().set_font_color(XlsxColor::Red);
-    let blue = Format::new().set_font_color(XlsxColor::Blue);
+    let red = Format::new().set_font_color(Color::Red);
+    let blue = Format::new().set_font_color(Color::Blue);
     let bold = Format::new().set_bold();
     let italic = Format::new().set_italic();
     let center = Format::new().set_align(FormatAlign::Center);
