--- a/formulas/intro.html
+++ b/formulas/intro.html
@@ -147,7 +147,7 @@
 </span><span class="boring">//
 </span><span class="boring">// Copyright 2022-2023, John McNamara, jmcnamara@cpan.org
 </span><span class="boring">
-</span><span class="boring">//! The following example demonstrates a simple formula.
+</span><span class="boring">//! The following example demonstrates writing a simple formula.
 </span><span class="boring">
 </span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
 </span><span class="boring">
