--- a/print.html
+++ b/print.html
@@ -10060,16 +10060,16 @@ workbook.close()
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
 <li>
-<p>Added <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_row"><code>worksheet.write_row()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_col"><code>worksheet.write_col()</code></a> methods to write
-arrays/iterators of data.</p>
+<p>Added <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_row"><code>worksheet.write_row()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_column"><code>worksheet.write_column()</code></a> methods to
+write arrays/iterators of data.</p>
 </li>
 <li>
 <p>Added <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Formula.html"><code>Formula</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Url.html"><code>Url</code></a> types to use with generic <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write"><code>worksheet.write()</code></a>.</p>
-<p><a href="https://github.com/jmcnamara/rust_xlsxwriter/pull/15">Feature Request #15</a>.</p>
+<p><a href="https://github.com/jmcnamara/rust_xlsxwriter/pull/16">Feature Request #16</a>.</p>
 </li>
 <li>
 <p>Make several string handling APIs more generic using <code>impl Into&lt;String&gt;</code>.</p>
-<p><a href="https://github.com/jmcnamara/rust_xlsxwriter/pull/15">Feature Request #15</a>.</p>
+<p><a href="https://github.com/jmcnamara/rust_xlsxwriter/pull/16">Feature Request #16</a>.</p>
 </li>
 <li>
 <p>Renamed/refactored <code>XlsxColor</code> to <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/enum.Color.html"><code>Color</code></a> for API consistency. The
