--- a/changelog.html
+++ b/changelog.html
@@ -147,8 +147,9 @@
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
 <li>
-<p>Added <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_row"><code>worksheet.write_row()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_column"><code>worksheet.write_column()</code></a> methods to
-write arrays/iterators of data.</p>
+<p>Added <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_row"><code>worksheet.write_row()</code></a>, <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_column"><code>worksheet.write_column()</code></a>,
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_row_matrix"><code>worksheet.write_row_matrix()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_column_matrix"><code>worksheet.write_column_matrix()</code></a>
+methods to write arrays/iterators of data.</p>
 </li>
 <li>
 <p>Added <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Formula.html"><code>Formula</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Url.html"><code>Url</code></a> types to use with generic <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write"><code>worksheet.write()</code></a>.</p>
