--- a/changelog.html
+++ b/changelog.html
@@ -143,6 +143,16 @@
                     <main>
                         <h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0400---2023-05-301"><a class="header" href="#0400---2023-05-301">[0.40.0] - 2023-05-301</a></h2>
+<ul>
+<li>
+<p>Added support for worksheet tables. See <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Table.html"><code>Table</code></a> and the
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.add_table"><code>worksheet.add_table()</code></a> method.</p>
+</li>
+<li>
+<p>Added support for the <code>bool</code> type in the generic <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write"><code>worksheet.write()</code></a> method.</p>
+</li>
+</ul>
 <h2 id="0390---2023-05-23"><a class="header" href="#0390---2023-05-23">[0.39.0] - 2023-05-23</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
