--- a/print.html
+++ b/print.html
@@ -16214,7 +16214,7 @@ workbook.close()
 </li>
 <li>
 <p>Renamed the worksheet <code>write_datetime()</code> method to the API consistent
-<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_datetime"><code>write_datetime_with_format()</code></a> and introduced a new
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_datetime_with_format"><code>write_datetime_with_format()</code></a> and introduced a new
 <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_datetime"><code>write_datetime()</code></a> method that doesn't take a format. This is
 required to fix a error in the APIs that prevented an unformatted datetime
 from taking the row or column format.</p>
