--- a/print.html
+++ b/print.html
@@ -16214,6 +16214,10 @@ added mapping from a <code>XlsxError</code> to a <code>JsValue</code> error.</p>
 <p>See the <a href="https://github.com/Clipi-12/rust_xlsx_wasm_example">rust_xlsx_wasm_example</a> sample application that demonstrates
 accessing <code>rust_xlsxwriter</code> code from JavaScript, Node.js, Deno and Wasmtime.</p>
 </li>
+<li>
+<p>Added <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_writer"><code>workbook.save_to_writer()</code></a> method to make it easier to interact with
+interfaces that implement the <code>&lt;W: Write&gt;</code> trait.</p>
+</li>
 </ul>
 <h2 id="0460---2023-08-20"><a class="header" href="#0460---2023-08-20">[0.46.0] - 2023-08-20</a></h2>
 <h3 id="added-1"><a class="header" href="#added-1">Added</a></h3>
