--- a/print.html
+++ b/print.html
@@ -16030,7 +16030,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     Ok(())
 }</code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="setting-document-properties-set-the-metadata-properties-for-a-workbook-1"><a class="header" href="#setting-document-properties-set-the-metadata-properties-for-a-workbook-1">Setting document properties Set the metadata properties for a workbook</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="setting-cell-protection-in-a-worksheet"><a class="header" href="#setting-cell-protection-in-a-worksheet">Setting cell protection in a worksheet</a></h1>
 <p>Example of cell locking and formula hiding in an Excel worksheet using worksheet
 protection.</p>
 <p><strong>Image of the output file:</strong></p>
