--- a/examples/protection.html
+++ b/examples/protection.html
@@ -141,7 +141,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="setting-document-properties-set-the-metadata-properties-for-a-workbook"><a class="header" href="#setting-document-properties-set-the-metadata-properties-for-a-workbook">Setting document properties Set the metadata properties for a workbook</a></h1>
+                        <h1 id="setting-cell-protection-in-a-worksheet"><a class="header" href="#setting-cell-protection-in-a-worksheet">Setting cell protection in a worksheet</a></h1>
 <p>Example of cell locking and formula hiding in an Excel worksheet using worksheet
 protection.</p>
 <p><strong>Image of the output file:</strong></p>
