--- a/examples/chart_data_tools.html
+++ b/examples/chart_data_tools.html
@@ -149,6 +149,8 @@
 <img src="../../images/chart_data_tools1.png" alt="Image of output chart example" /></p>
 <p>Chart 2 in the following example is an example of a chart with data labels and markers:
 <img src="../../images/chart_data_tools2.png" alt="Image of output chart example" /></p>
+<p>Chart 3 in the following example is an example of a chart with error bars:
+<img src="../../images/chart_data_tools3.png" alt="Image of output chart example" /></p>
 <p><strong>Code to generate the output file:</strong></p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">//
@@ -158,8 +160,8 @@
 </span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
 </span>use rust_xlsxwriter::{
-    Chart, ChartDataLabel, ChartMarker, ChartTrendline, ChartTrendlineType, ChartType, Format,
-    Workbook, XlsxError,
+    Chart, ChartDataLabel, ChartErrorBars, ChartErrorBarsType, ChartMarker, ChartTrendline,
+    ChartTrendlineType, ChartType, Format, Workbook, XlsxError,
 };
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
@@ -236,6 +238,32 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Add the chart to the worksheet.
     worksheet.insert_chart_with_offset(17, 3, &amp;chart, 25, 10)?;
+
+    // -----------------------------------------------------------------------
+    // Error Bar example.
+    // -----------------------------------------------------------------------
+
+    // Create a new Line chart.
+    let mut chart = Chart::new(ChartType::Line);
+
+    // Configure the first series with data labels and markers.
+    chart
+        .add_series()
+        .set_categories(&quot;Sheet1!$A$2:$A$7&quot;)
+        .set_values(&quot;Sheet1!$B$2:$B$7&quot;)
+        .set_y_error_bars(ChartErrorBars::new().set_type(ChartErrorBarsType::StandardError));
+
+    // Configure the second series as default.
+    chart
+        .add_series()
+        .set_categories(&quot;Sheet1!$A$2:$A$7&quot;)
+        .set_values(&quot;Sheet1!$C$2:$C$7&quot;);
+
+    // Add a chart title.
+    chart.title().set_name(&quot;Chart with Error Bars&quot;);
+
+    // Add the chart to the worksheet.
+    worksheet.insert_chart_with_offset(33, 3, &amp;chart, 25, 10)?;
 
     workbook.save(&quot;chart_data_tools.xlsx&quot;)?;
 
