--- a/changelog.html
+++ b/changelog.html
@@ -147,7 +147,7 @@
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
 <li>
-<p>Added support for Excel Stock charts. See the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/cookbook/index.html#chart-pie-excel-stock-chart-example">Stock Chart</a> cookbook example.</p>
+<p>Added support for Excel Stock charts. See the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/cookbook/index.html#chart-stock-excel-stock-chart-example">Stock Chart</a> cookbook example.</p>
 </li>
 <li>
 <p>Added support to charts for:</p>
@@ -164,8 +164,8 @@ and<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartA
 </li>
 <li>
 <p>Add worksheet syntactic helper methods
-<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_row_with_formatting"><code>Worksheet::write_row_with_formatting()</code></a> and
-<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_column_with_formatting"><code>Worksheet::write_column_with_formatting()</code></a>.</p>
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_row_with_format"><code>Worksheet::write_row_with_format()</code></a> and
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_column_with_format"><code>Worksheet::write_column_with_format()</code></a>.</p>
 </li>
 </ul>
 <h2 id="0520---2023-10-20"><a class="header" href="#0520---2023-10-20">[0.52.0] - 2023-10-20</a></h2>
