--- a/changelog.html
+++ b/changelog.html
@@ -148,7 +148,7 @@
 <ul>
 <li>
 <p>Added support for Serde serialization. This requires the <code>serde</code> feature flag
-to be enabled.</p>
+to be enabled. See <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/serializer/index.html#working-with-serde">Working with Serde</a>.</p>
 </li>
 <li>
 <p>Added support for writing <code>u64</code> and <code>i64</code> number within Excel's limitations.
