--- a/changelog.html
+++ b/changelog.html
@@ -143,6 +143,13 @@
                     <main>
                         <h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0580---2023-12-11"><a class="header" href="#0580---2023-12-11">[0.58.0] - 2023-12-11</a></h2>
+<ul>
+<li>
+<p>Added serialization support for <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ExcelDateTime.html"><code>ExcelDateTime</code></a> and <a href="https://docs.rs/chrono/latest/chrono"><code>Chrono</code></a> date/time
+types. See <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/serializer/index.html#serializing-dates-and-times">Working with Serde - Serializing dates and times</a>.</p>
+</li>
+</ul>
 <h2 id="0570---2023-12-09"><a class="header" href="#0570---2023-12-09">[0.57.0] - 2023-12-09</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
