--- a/license.html
+++ b/license.html
@@ -339,7 +339,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</p>
 <h2 id="mit-license"><a class="header" href="#mit-license">MIT License</a></h2>
-<p>Copyright (c) 2022-2023 John McNamara <a href="mailto:jmcnamara@cpan.org">jmcnamara@cpan.org</a></p>
+<p>Copyright 2022-2024 John McNamara <a href="mailto:jmcnamara@cpan.org">jmcnamara@cpan.org</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
