--- a/print.html
+++ b/print.html
@@ -24782,7 +24782,9 @@ workbook.close()
 <p>Added support for a <code>XlsxSerialize</code> derive and struct attributes to control
 the formatting and options of the Excel output during serialization. These are
 similar in intention to Serde container/field attributes.</p>
-<p>See <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/serializer/index.html#working-with-serde">Working with Serde</a> and the the discussion at <a href="https://github.com/jmcnamara/rust_xlsxwriter/pull/66">Feature Request #66</a>.</p>
+<p>See <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/serializer/index.html#controlling-excel-output-via-xlsxserialize-and-struct-attributes">Controlling Excel output via <code>XlsxSerialize</code> and struct attributes</a> and
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/serializer/index.html#working-with-serde">Working with Serde</a>.</p>
+<p><a href="https://github.com/jmcnamara/rust_xlsxwriter/pull/66">Feature Request #66</a>.</p>
 </li>
 <li>
 <p>Added <code>XlsxError::CustomError</code> as a target error for external crates/apps.</p>
