--- a/worksheet/autofit.html
+++ b/worksheet/autofit.html
@@ -186,7 +186,7 @@ should be sufficient and if not you can set your own widths, see below.</p>
 <p>The <code>worksheet.autofit()</code> method ignores columns that already have an explicit
 column width set via <a href="Worksheet::set_column_width()"><code>set_column_width()</code></a> or
 <a href="Worksheet::set_column_width_pixels()"><code>set_column_width_pixels()</code></a> if it is
-greater than the calculate maximum width. Alternatively, calling these methods
+greater than the calculated maximum width. Alternatively, calling these methods
 after <code>worksheet.autofit()</code> will override the autofit value.</p>
 <p><strong>Note</strong>, <code>worksheet.autofit()</code> iterates through all the cells in a worksheet
 that have been populated with data and performs a length calculation on each
