--- a/changelog.html
+++ b/changelog.html
@@ -175,6 +175,11 @@
                     <main>
                         <h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0642---2023-04-13"><a class="header" href="#0642---2023-04-13">[0.64.2] - 2023-04-13</a></h2>
+<h3 id="fixed"><a class="header" href="#fixed">Fixed</a></h3>
+<ul>
+<li>Fixed internal links in table of contents.</li>
+</ul>
 <h2 id="0641---2023-03-26"><a class="header" href="#0641---2023-03-26">[0.64.1] - 2023-03-26</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
@@ -382,7 +387,7 @@ and<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartA
 <li>Added support for chart series error bars via the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ChartErrorBars.html"><code>ChartErrorBars</code></a> struct
 and methods.</li>
 </ul>
-<h3 id="fixed"><a class="header" href="#fixed">Fixed</a></h3>
+<h3 id="fixed-1"><a class="header" href="#fixed-1">Fixed</a></h3>
 <ul>
 <li>
 <p>Fixed XML error in non-Pie charts.</p>
@@ -417,7 +422,7 @@ interface.</p>
 <p>Added support for leader lines to non-Pie charts.</p>
 </li>
 </ul>
-<h3 id="fixed-1"><a class="header" href="#fixed-1">Fixed</a></h3>
+<h3 id="fixed-2"><a class="header" href="#fixed-2">Fixed</a></h3>
 <ul>
 <li>Fixed handling of <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Formula.html#formulas-added-in-excel-2010-and-later">future functions</a> in table formulas.</li>
 </ul>
@@ -466,7 +471,7 @@ the <a href="https://crates.io/crates/polars_excel_writer"><code>polars_excel_wr
 </li>
 </ul>
 <h2 id="0450---2023-08-12"><a class="header" href="#0450---2023-08-12">[0.45.0] - 2023-08-12</a></h2>
-<h3 id="fixed-2"><a class="header" href="#fixed-2">Fixed</a></h3>
+<h3 id="fixed-3"><a class="header" href="#fixed-3">Fixed</a></h3>
 <ul>
 <li>
 <p>Fixed "multiply with overflow" issue when image locations in the worksheet
@@ -628,7 +633,7 @@ via <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Chart
 <li>Added performance improvement for applications that use a lot of <code>Format</code>
 objects. <a href="https://github.com/jmcnamara/rust_xlsxwriter/issues/30">GitHub Issue #30</a>.</li>
 </ul>
-<h3 id="fixed-3"><a class="header" href="#fixed-3">Fixed</a></h3>
+<h3 id="fixed-4"><a class="header" href="#fixed-4">Fixed</a></h3>
 <ul>
 <li>Fixed issue introduced in v0.34.0 where <code>Rc&lt;&gt;</code> value was blocking <code>Send</code> in
 multithreaded applications. <a href="https://github.com/jmcnamara/rust_xlsxwriter/issues/29">GitHub Issue #29</a>.</li>
@@ -891,7 +896,7 @@ For example strings like "This is <strong>bold</strong> and this is <em>italic</
 </li>
 </ul>
 <h2 id="0171---2022-12-18"><a class="header" href="#0171---2022-12-18">[0.17.1] - 2022-12-18</a></h2>
-<h3 id="fixed-4"><a class="header" href="#fixed-4">Fixed</a></h3>
+<h3 id="fixed-5"><a class="header" href="#fixed-5">Fixed</a></h3>
 <ul>
 <li>Fixes issue where header image files became corrupt during incremental saves.
 Also fixes similar issues in some formatting code.</li>
@@ -1133,7 +1138,7 @@ Footers</a>.</p>
 </ul>
 <p>See also the rust_xlsxwriter user documentation on <a href="https://rustxlsxwriter.github.io/formulas/dynamic_arrays.html">Dynamic Array support</a>.</p>
 <h2 id="031---2022-10-01"><a class="header" href="#031---2022-10-01">[0.3.1] - 2022-10-01</a></h2>
-<h3 id="fixed-5"><a class="header" href="#fixed-5">Fixed</a></h3>
+<h3 id="fixed-6"><a class="header" href="#fixed-6">Fixed</a></h3>
 <ul>
 <li>Fixed minor crate issue.</li>
 </ul>
@@ -1144,7 +1149,7 @@ Footers</a>.</p>
 values.</li>
 </ul>
 <h2 id="021---2022-09-22"><a class="header" href="#021---2022-09-22">[0.2.1] - 2022-09-22</a></h2>
-<h3 id="fixed-6"><a class="header" href="#fixed-6">Fixed</a></h3>
+<h3 id="fixed-7"><a class="header" href="#fixed-7">Fixed</a></h3>
 <ul>
 <li>Fixed some minor crate/publishing issues.</li>
 </ul>
